--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/css/admin/styles.css">
   <link href="/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="/css/sb-admin.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 <body>
 {{> admin/nav}}
 
