--- a/views/admin/products/records.handlebars
+++ b/views/admin/products/records.handlebars
@@ -13,7 +13,7 @@
 <br>
 <div class="tab-content">
   <div class="tab-pane fade show active" id="all-orders" role="tabpanel" aria-labelledby="home-tab">
-    <table class="table table-hover">
+    <table id="dtb-all-orders" class="display table table-sm table-striped table-bordered table-hover">
       <thead>
         <tr>
           <th>orderID</th>
@@ -21,7 +21,7 @@
       </thead>
       <tbody>
         {{#each history}}
-            <tr>
+            <tr class="clickable-row" data-href="http://localhost:4242/admin/products/records/order/{{this}}">
               <td>{{this}}</td>
             </tr>
           {{/each}}
@@ -30,22 +30,23 @@
   </table>
   </div>
   <div class="tab-pane fade" id="each-product" role="tabpanel" aria-labelledby="profile-tab">
-    <h2>All records list</h2>
-    <table class="table table-hover">
+    <table id="dtb-all-rec" class="display table table-striped table-sm table-bordered table-hover">
       <thead>
         <tr>
+          <th>date</th>
           <th>name</th>
           <th>quantity</th>
-          <th>date</th>
+          <th>cost</th>
           <th>orderID</th>
         </tr>
       </thead>
       <tbody>
         {{#each records}}
-        <tr>
+        <tr class="clickable-row" data-href="http://localhost:4242/admin/products/edit/{{ProductId}}">
+          <td>{{date}}</td>
           <td>{{name}}</td>
           <td>{{quantity}}</td>
-          <td>{{date}}</td>
+          <td>{{cost}}</td>
           <td>{{storyId}}</td>
         </tr>
         {{/each}}
@@ -53,5 +54,4 @@
     </table>
   </div>
 </div>
-
 </section>
