--- a/views/partials/admin/footer.handlebars
+++ b/views/partials/admin/footer.handlebars
@@ -1,10 +1,4 @@
-<footer class="sticky-footer">
-  <div class="container">
-    <div class="text-center">
-      <small>Copyright © 2018</small>
-    </div>
-  </div>
-</footer>
+
 
 
 <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -14,3 +8,14 @@
 <script src="/js/sb-admin.min.js"></script>
 <script type="text/javascript" src="/js/functions/helpers/clickableRow.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+
+
+<script type="text/javascript" src="/js/datatables/all-rec.js"></script>
+<script type="text/javascript" src="/js/datatables/all-orders.js"></script>
