--- a/views/home/login.handlebars
+++ b/views/home/login.handlebars
@@ -2,16 +2,18 @@
 <div class="card card-login mx-auto mt-5">
     <div class="card-body text-center">
         <form action="/login" method="post">
-          <br>
+            <br>
             <div class="form-group">
-                <input name="login" id="exampleInputLogin" type="login" aria-describedby="loginHelp" placeholder="Login">
+                <input name="login" id="exampleInputLogin" type="login" aria-describedby="loginHelp"
+                    placeholder="Login">
             </div>
             <div class="form-group">
                 <input name="password" id="exampleInputPassword1" type="password" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
-        <br><hr>
+        <br>
+        <hr>
         <div class="text-center">
             <a class="d-block small mt-3" href="/register">Register an Account</a>
             <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
